--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
+    "start": "node app.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js ; npx jets"
   },
   "keywords": [],
